added more js to populate property images

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="properties-container container">
                 <!-- BOX 1 -->
                 <div class="box">
-                    <img id="propPic"src="/img/p1.jpg" alt="">
+                    <img id="propOnePic" src="/img/p1.jpg" alt="">
                     <h3 id="propPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propPic" src="/img/p1.jpg" alt="">
+                    <img id="propTwoPic" src="/img/p1.jpg" alt="">
                     <h3 id="propPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propPic" src="/img/p1.jpg" alt="">
+                    <img id="propThreePic" src="/img/p1.jpg" alt="">
                     <h3 id="propPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propPic" src="/img/p1.jpg" alt="">
+                    <img id="propFourPic" src="/img/p1.jpg" alt="">
                     <h3 id="propPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propPic" src="/img/p1.jpg" alt="">
+                    <img id="propFivePic" src="/img/p1.jpg" alt="">
                     <h3 id="propPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propPic" src="/img/p1.jpg" alt="">
+                    <img id="propSixPic" src="/img/p1.jpg" alt="">
                     <h3 id="propPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
