--- a/index.html
+++ b/index.html
@@ -86,85 +86,85 @@
                 <!-- BOX 1 -->
                 <div class="box">
                     <img id="propOnePic" src="/img/p1.jpg" alt="">
-                    <h3 id="propPrice">12,999</h3>
+                    <h3 id="propOnePrice">12,999</h3>
                     <div class="content">
                         <div class="text">
                             <h3>The Palace</h3>
                             <p>London, UK</p>
                         </div>
                         <div class="icon">
-                            <i class='bx bx-bed'><span id="propBeds">5</span></i>
-                            <i class='bx bx-bath' ><span id="propBaths">2</span></i>
+                            <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
+                            <i class='bx bx-bath' ><span id="propOneBaths">2</span></i>
                         </div>
                     </div>
                 </div>
                 <div class="box">
                     <img id="propTwoPic" src="/img/p1.jpg" alt="">
-                    <h3 id="propPrice">12,999</h3>
+                    <h3 id="propTwoPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
                             <h3>The Palace</h3>
                             <p>London, UK</p>
                         </div>
                         <div class="icon">
-                            <i class='bx bx-bed'><span id="propBeds">5</span></i>
-                            <i class='bx bx-bath' ><span id="propBaths">2</span></i>
+                            <i class='bx bx-bed'><span id="propTwoBeds">5</span></i>
+                            <i class='bx bx-bath' ><span id="propTwoBaths">2</span></i>
                         </div>
                     </div>
                 </div>
                 <div class="box">
                     <img id="propThreePic" src="/img/p1.jpg" alt="">
-                    <h3 id="propPrice">12,999</h3>
+                    <h3 id="propThreePrice">12,999</h3>
                     <div class="content">
                         <div class="text">
                             <h3>The Palace</h3>
                             <p>London, UK</p>
                         </div>
                         <div class="icon">
-                            <i class='bx bx-bed'><span id="propBeds">5</span></i>
-                            <i class='bx bx-bath' ><span id="propBaths">2</span></i>
+                            <i class='bx bx-bed'><span id="propThreeBeds">5</span></i>
+                            <i class='bx bx-bath' ><span id="propThreeBaths">2</span></i>
                         </div>
                     </div>
                 </div>
                 <div class="box">
                     <img id="propFourPic" src="/img/p1.jpg" alt="">
-                    <h3 id="propPrice">12,999</h3>
+                    <h3 id="propFourPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
                             <h3>The Palace</h3>
                             <p>London, UK</p>
                         </div>
                         <div class="icon">
-                            <i class='bx bx-bed'><span id="propBeds">5</span></i>
-                            <i class='bx bx-bath' ><span id="propBaths">2</span></i>
+                            <i class='bx bx-bed'><span id="propFourBeds">5</span></i>
+                            <i class='bx bx-bath' ><span id="propFourBaths">2</span></i>
                         </div>
                     </div>
                 </div>
                 <div class="box">
                     <img id="propFivePic" src="/img/p1.jpg" alt="">
-                    <h3 id="propPrice">12,999</h3>
+                    <h3 id="propFivePrice">12,999</h3>
                     <div class="content">
                         <div class="text">
                             <h3>The Palace</h3>
                             <p>London, UK</p>
                         </div>
                         <div class="icon">
-                            <i class='bx bx-bed'><span id="propBeds">5</span></i>
-                            <i class='bx bx-bath' ><span id="propBaths">2</span></i>
+                            <i class='bx bx-bed'><span id="propFiveBeds">5</span></i>
+                            <i class='bx bx-bath' ><span id="propFiveBaths">2</span></i>
                         </div>
                     </div>
                 </div>
                 <div class="box">
                     <img id="propSixPic" src="/img/p1.jpg" alt="">
-                    <h3 id="propPrice">12,999</h3>
+                    <h3 id="propSixPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
                             <h3>The Palace</h3>
                             <p>London, UK</p>
                         </div>
                         <div class="icon">
-                            <i class='bx bx-bed'><span id="propBeds">5</span></i>
-                            <i class='bx bx-bath' ><span id="propBaths">2</span></i>
+                            <i class='bx bx-bed'><span id="propSixBeds">5</span></i>
+                            <i class='bx bx-bath' ><span id="propSixBaths">2</span></i>
                         </div>
                     </div>
                 </div>
