--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
         <!-- HOME -->
         <section class="home container" id="home">
             <div class="home-text">
-                <h1>Find Your Next <br>Perfect Place To <br> Live.</h1>
+                <h1>A Higher Quality <br> Of Living.</h1>
                 <a href="sign-up.html" class="button">Sign Up</a>
             </div>
         </section>
         <!-- ABOUT -->
         <section class="about container" id="about">
             <div class="about-img">
-                <img src="img/a1.jpg" alt="">
+                <img src="img/a2.jpg" alt="">
             </div>
             <div class="about-text">
                 <span>About Us</span>
-                <h2>We Provide The Best <br> Property For You</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, cum!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, cum!</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, cum!</p>
+                <h2>Luxury, <br> In Every Detail</h2>
+                <p>Luxury must be comfortable, otherwise it's not luxury!</p>
+                <p>Sometimes the key to happiness, is finding the key to the right home!</p>
+                <!-- <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, cum!</p> -->
                 <a href="#" class="button">Learn More</a>
             </div>
         </section>
@@ -59,28 +59,28 @@
             <!-- BOX 1 -->
             <div class="box">
                 <i class='bx bx-user'></i>
-                <h3>Make your Dream True</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p>
+                <h3>We make dreams come true</h3>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p> -->
             </div>
             <!-- BOX 2 -->
             <div class="box">
                 <i class='bx bx-desktop'></i>
-                <h3>Start Your Membership</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p>
+                <h3>Easy application process</h3>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p> -->
             </div>
             <!-- BOX 3 -->
             <div class="box">
                 <i class='bx bx-home-alt'></i>
-                <h3>Enjoy Your New Home</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p>
+                <h3>Enjoy The best luxury homes on the market</h3>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p> -->
             </div>
         </section>
         <!-- PROPERTIES -->
         <section class="properties container" id="properties">
             <div class="heading">
-                <span>Recent</span>
-                <h2>Our Featured Properties</h2>
-                <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Laboriosam, dolores?</p>
+                <span>Popular</span>
+                <h2>Our Most Popular Properties</h2>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Laboriosam, dolores?</p> -->
             </div>
             <div class="properties-container container">
                 <!-- BOX 1 -->
@@ -89,8 +89,8 @@
                     <h3 id="propOnePrice">12,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3>The Palace</h3>
-                            <p>London, UK</p>
+                            <h3 id="propOneAdd">The Palace</h3>
+                            <p id="propOneLoc">London, UK</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
@@ -103,8 +103,8 @@
                     <h3 id="propTwoPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3>The Palace</h3>
-                            <p>London, UK</p>
+                            <h3 id="propTwoAdd">The Palace</h3>
+                            <p id="propTwoLoc">London, UK</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propTwoBeds">5</span></i>
@@ -117,8 +117,8 @@
                     <h3 id="propThreePrice">12,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3>The Palace</h3>
-                            <p>London, UK</p>
+                            <h3 id="propThreeAdd">The Palace</h3>
+                            <p id="propThreeLoc">London, UK</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propThreeBeds">5</span></i>
@@ -131,8 +131,8 @@
                     <h3 id="propFourPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3>The Palace</h3>
-                            <p>London, UK</p>
+                            <h3 id="propFourAdd">The Palace</h3>
+                            <p id="propFourLoc">London, UK</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propFourBeds">5</span></i>
@@ -145,8 +145,8 @@
                     <h3 id="propFivePrice">12,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3>The Palace</h3>
-                            <p>London, UK</p>
+                            <h3 id="propFiveAdd">The Palace</h3>
+                            <p id="propFiveLoc">London, UK</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propFiveBeds">5</span></i>
@@ -159,8 +159,8 @@
                     <h3 id="propSixPrice">12,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3>The Palace</h3>
-                            <p>London, UK</p>
+                            <h3 id="propSixAdd">The Palace</h3>
+                            <p id="propSixLoc">London, UK</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propSixBeds">5</span></i>
@@ -174,7 +174,7 @@
         <section class="newsletter container">
             <h2>Have a question in mind?<br>Let us help you</h2>
             <form action="">
-                <input type="email" name="" id="email-box" placeholder="realestate@gmail.com" required>
+                <input type="email" name="" id="email-box" placeholder="diamondrealestate@gmail.com" required>
                 <input type="submit" value="send" class="button">
             </form>
         </section>
