Cleaned up Comments and added functionality

--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
         href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     </head>
     <body>
-        <!-- NAV -->
+        <!-- GEOLOCATION??? -->
+        <script>
+            if('geolocation' in navigator) {
+            console.log('geolocation is available')
+        } else {
+            console.log('geolocation is not available')
+        }
+        </script>
+
+        <!-- HEADER -->
         <header>
             <div class="nav container">
-                <!-- logo -->
+                <!-- DIAMOND LOGO -->
                 <a href="index.html" class="logo">
                     <img src="diamond.png" alt="">
                 </a>
@@ -32,18 +41,18 @@
                     <li><a href="#sales">Sales</a></li>
                     <li><a href="#properties">Properties</a></li>
                 </ul>
-                <!-- LOG IN -->
+                <!-- LOG IN button -->
                 <a href="login.html" class="button">Log In</a>
             </div>
         </header>
-        <!-- HOME -->
+        <!-- MAIN HERO -->
         <section class="home container" id="home">
             <div class="home-text">
                 <h1>A Higher Quality <br> Of Living.</h1>
                 <a href="sign-up.html" class="button">Sign Up</a>
             </div>
         </section>
-        <!-- ABOUT -->
+        <!-- INFO/ABOUT -->
         <section class="about container" id="about">
             <div class="about-img">
                 <img src="img/a2.jpg" alt="">
@@ -86,14 +95,13 @@
                 <!-- <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Laboriosam, dolores?</p> -->
             </div>
             <div class="properties-container container">
-                <!-- BOX 1 -->
                 <div class="box">
-                    <img id="propOnePic" src="/img/p1.jpg" alt="">
-                    <h3 id="propOnePrice">12,999</h3>
+                    <img id="propOnePic" src="/img/p2.jpg" alt="">
+                    <h3 id="propOnePrice">$999,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3 id="propOneAdd">The Palace</h3>
-                            <p id="propOneLoc">London, UK</p>
+                            <h3 id="propOneAdd">Address</h3>
+                            <p id="propOneLoc">United Sates</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
@@ -102,12 +110,12 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propTwoPic" src="/img/p1.jpg" alt="">
-                    <h3 id="propTwoPrice">12,999</h3>
+                    <img id="propTwoPic" src="/img/p2.jpg" alt="">
+                    <h3 id="propTwoPrice">$999,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3 id="propTwoAdd">The Palace</h3>
-                            <p id="propTwoLoc">London, UK</p>
+                            <h3 id="propTwoAdd">Address</h3>
+                            <p id="propTwoLoc">United Sates</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propTwoBeds">5</span></i>
@@ -116,12 +124,12 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propThreePic" src="/img/p1.jpg" alt="">
-                    <h3 id="propThreePrice">12,999</h3>
+                    <img id="propThreePic" src="/img/p2.jpg" alt="">
+                    <h3 id="propThreePrice">$999,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3 id="propThreeAdd">The Palace</h3>
-                            <p id="propThreeLoc">London, UK</p>
+                            <h3 id="propThreeAdd">Address</h3>
+                            <p id="propThreeLoc">United Sates</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propThreeBeds">5</span></i>
@@ -130,12 +138,12 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propFourPic" src="/img/p1.jpg" alt="">
-                    <h3 id="propFourPrice">12,999</h3>
+                    <img id="propFourPic" src="/img/p2.jpg" alt="">
+                    <h3 id="propFourPrice">$999,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3 id="propFourAdd">The Palace</h3>
-                            <p id="propFourLoc">London, UK</p>
+                            <h3 id="propFourAdd">Address</h3>
+                            <p id="propFourLoc">United Sates</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propFourBeds">5</span></i>
@@ -144,12 +152,12 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propFivePic" src="/img/p1.jpg" alt="">
-                    <h3 id="propFivePrice">12,999</h3>
+                    <img id="propFivePic" src="/img/p2.jpg" alt="">
+                    <h3 id="propFivePrice">$999,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3 id="propFiveAdd">The Palace</h3>
-                            <p id="propFiveLoc">London, UK</p>
+                            <h3 id="propFiveAdd">Address</h3>
+                            <p id="propFiveLoc">United Sates</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propFiveBeds">5</span></i>
@@ -158,12 +166,12 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img id="propSixPic" src="/img/p1.jpg" alt="">
-                    <h3 id="propSixPrice">12,999</h3>
+                    <img id="propSixPic" src="/img/p2.jpg" alt="">
+                    <h3 id="propSixPrice">$999,999</h3>
                     <div class="content">
                         <div class="text">
-                            <h3 id="propSixAdd">The Palace</h3>
-                            <p id="propSixLoc">London, UK</p>
+                            <h3 id="propSixAdd">Adress</h3>
+                            <p id="propSixLoc">United Sates</p>
                         </div>
                         <div class="icon">
                             <i class='bx bx-bed'><span id="propSixBeds">5</span></i>
@@ -211,7 +219,7 @@
         </section>
         <!-- COPYRIGHT -->
         <div class="copyright">
-            <p>&#169;2022 Real Estate All Rights Reserved</p>
+            <p>&#169;2022 Diamond Real Estate All Rights Reserved</p>
         </div>
         <script src="main.js"></script>
 </body>
