Finished impelmenting geolocation as well as reverse geocoding

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <!-- GEOLOCATION??? -->
-        <script>
+        <!-- <script>
             // CHECK IF GEOLOCATION AVAILABLE
             if('geolocation' in navigator) {
             console.log('geolocation is available')
@@ -43,7 +43,7 @@
         }
 
 
-        </script>
+        </script> -->
 
         <!-- HEADER -->
         <header>
