--- a/property-details.html
+++ b/property-details.html
@@ -36,29 +36,43 @@
   </header>
   <div class="showcase container">
     <div class="showcase-image"></div>
-    <div class="property-info-container">
-      <div class="info-scroll-container">
-        <div class="info-header">
-          <h2>999,000</h2>
-          <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
-          <i class='bx bx-bath' ><span id="propOneBaths">2</span></i>
-        </div>
-        <div class="info-details">
-          <h3>1234 Diamond Drive, Diamond City, Megaoplolis 11111
-          </h3>
-          <span>For Sale</span>
-        </div>
-        <div class="action-section">
-          <a href="">Request A tour</a>
-          <a href="">Contact Agent</a>
+    <div class="showcase-info">
+      <div class="property-info-container">
+        <div class="info-scroll-container">
+          <div class="info-header">
+            <h2>$999,000</h2>
+            <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
+            <i class='bx bx-bath' ><span id="propOneBaths">2</span></i>
+          </div>
+          <div class="info-details">
+            <h3>1234 Diamond Drive, Diamond City, Megaoplolis 11111
+            </h3>
+            <div class="status">
+              <div class="dot"></div>
+              <span>For Sale</span>
+            </div>
+          </div>
+          <div class="action-section">
+            <a href="" class="button">Request A tour</a>
+            <a href="" class="button">Contact Agent</a>
+          </div>
+          <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="image-gallery">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+      <div class="image-gallery">
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+        <div class="gallery-image"></div>
+      </div>
     </div>
   </div>
     
