--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!-- SALES -->
         <section class="sales container" id="sales">
             <!-- BOX 1 -->
-            <div class="box">
+            <div class="boxOne box">
                 <i class='bx bx-user'></i>
                 <h3>We make dreams come true</h3>
                 <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, omnis.</p> -->
@@ -116,7 +116,7 @@
                 <!-- <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Laboriosam, dolores?</p> -->
             </div>
             <div class="properties-container container">
-                <div class="box">
+                <div class="box" onClick ="getPropDetails()">
                     <img id="propOnePic" src="/img/p2.jpg" alt="">
                     <h3 id="propOnePrice">$999,999</h3>
                     <div class="content">
