--- a/property-details.html
+++ b/property-details.html
@@ -33,48 +33,122 @@
           <!-- LOG IN button -->
           <a href="login.html" class="button">Log In</a>
       </div>
-  </header>
-  <div class="showcase container">
-    <div class="showcase-image"></div>
-    <div class="showcase-info">
-      <div class="property-info-container">
-        <div class="info-scroll-container">
-          <div class="info-header">
-            <h2>$999,000</h2>
-            <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
-            <i class='bx bx-bath' ><span id="propOneBaths">2</span></i>
-          </div>
-          <div class="info-details">
-            <h3>1234 Diamond Drive, Diamond City, Megaoplolis 11111
-            </h3>
-            <div class="status">
-              <div class="dot"></div>
-              <span>For Sale</span>
+    </header>
+    <div class="showcase container">
+      <div class="showcase-image"></div>
+      <div class="showcase-info">
+        <div class="property-info-container">
+          <div class="info-scroll-container">
+            <div class="info-header">
+              <h2>$999,000</h2>
+              <div class="info">
+                <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
+                <i class='bx bx-bath' ><span id="propOneBaths">2</span></i>
+                <i class='bx bx-ruler' >
+                <span class="square-num">&#178 .Ft</span>
+                <span id="propOneBaths">2</span>
+                </i>
+              </div>
+
+            </div>
+            <div class="info-details">
+              <h3>1234 Diamond Drive, Diamond City, Megaoplolis 11111
+              </h3>
+              <div class="status">
+                <div class="dot"></div>
+                <span>For Sale</span>
+              </div>
+              <h4>Property Overview</h4>
+              <p>19360 Murray Hill St, Detroit, MI 48235 is a single family home built in 1948. This property was last sold for $40,000 in 2021 and currently has an estimated value of $104,200. According to the Detroit public records, the property at 19360 Murray Hill St, Detroit, MI 48235 has approximately 956 square feet,  with a lot size of 4,792 square feet. Nearby schools include Detroit International Academy For Young Women, Bow Elementary-Middle School and Douglass Academy For Young Men.</p>
+            </div>
+            <div class="action-section">
+              <a href="" class="button">Request A tour</a>
+              <a href="" class="button">Contact Agent</a>
+            </div>
+            <div class="map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+            </div>
+            <div class="school-container">
+              <h2>Nearby Schools</h2>
+              <div class="school">
+                <h3>Diamond High School</h3>
+                <div class="school-bottom">
+                  <div class="left">
+                    <h4>Public High School</h4>
+                    <span>Grades:</span><span>9-12</span>
+                    <span>Students:</span><span>1200</span>
+                  </div>
+                  <div class="right">
+                    <div class="rating">
+                      <span>7</span>
+                    </div>
+                    <p>Out Of 10</p>
+                  </div>
+                </div>
+              </div>
+              <div class="school">
+                <h3>Diamond Middle School</h3>
+                <div class="school-bottom">
+                  <div class="left">
+                    <h4>Public Middle School</h4>
+                    <span>Grades:</span><span>4-8</span>
+                    <span>Students:</span><span>460</span>
+                  </div>
+                  <div class="right">
+                    <div class="rating">
+                      <span>7</span>
+                    </div>
+                    <p>Out Of 10</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="action-section">
-            <a href="" class="button">Request A tour</a>
-            <a href="" class="button">Contact Agent</a>
-          </div>
-          <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-          </div>
+        </div>
+        <div class="image-gallery">
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
+          <div class="gallery-image"></div>
         </div>
       </div>
-      <div class="image-gallery">
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-        <div class="gallery-image"></div>
-      </div>
     </div>
-  </div>
-    
+    <section class="footer">
+      <div class="footer-container container">
+          <h2>Real Estate</h2>
+          <div class="footer-box">
+              <h3>Quick Links</h3>
+              <a href="#">Agency</a>
+              <a href="#">Building</a>
+              <a href="#">Rates</a>
+          </div>
+          <div class="footer-box">
+              <h3>Locations</h3>
+              <a href="#">New York</a>
+              <a href="#">Dallas</a>
+              <a href="#">San Diego</a>
+          </div>
+          <div class="footer-box">
+              <h3>Contact</h3>
+              <a href="#">+1 (234)567-8900</a>
+              <a href="#">realestate@gmail.com</a>
+              <div class="social">
+                  <a href="#"><i class='bx bxl-facebook'></i></a>
+                  <a href="#"><i class='bx bxl-twitter'></i></a>
+                  <a href="#"><i class='bx bxl-instagram'></i></a>
+              </div>
+          </div>
+      </div>
+    </section>
+  <!-- COPYRIGHT -->
+    <div class="copyright">
+      <p>&#169;2022 Diamond Real Estate All Rights Reserved</p>
+    </div> 
   </body>
 </html>
