added similiar homes section to property details page

--- a/property-details.html
+++ b/property-details.html
@@ -40,13 +40,12 @@
         <div class="property-info-container">
           <div class="info-scroll-container">
             <div class="info-header">
-              <h2>$999,000</h2>
+              <h2>$999,999</h2>
               <div class="info">
-                <i class='bx bx-bed'><span id="propOneBeds">5</span></i>
-                <i class='bx bx-bath' ><span id="propOneBaths">2</span></i>
-                <i class='bx bx-ruler' >
-                <span class="square-num">&#178 .Ft</span>
-                <span id="propOneBaths">2</span>
+                <i class='bx bx-bed bed'><span id="propOneBeds">5</span></i>
+                <i class='bx bx-bath bath' ><span id="propOneBaths">2</span></i>
+                <i class='bx bx-ruler sqft'>
+                <span id="propOneBaths">1500 ft&#178</span>
                 </i>
               </div>
 
@@ -105,17 +104,52 @@
             </div>
           </div>
         </div>
-        <div class="image-gallery">
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
-          <div class="gallery-image"></div>
+        <div class="gallery-container">
+          <div class="image-gallery">
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+            <div class="gallery-image"></div>
+          </div>
+          <div class="homes properties-container">
+            <h1>Similar Homes</h1>
+            <div class="box">
+              <img id="propTwoPic" src="/img/p2.jpg" alt="">
+              <h3 id="home-price">$999,999</h3>
+              <div class="content">
+                  <div class="text">
+                      <h3 id="home-add">1234 Diamond Drive, Diamond City, Megaoplolis 11111</h3>
+                      <p id="home-loc">United Sates</p>
+                  </div>
+                  <!-- HOME DETAILS MAYBE?-->
+                  <div class="icon">
+                      <i class='bx bx-bed'><span id="propTwoBeds">5</span></i>
+                      <i class='bx bx-bath' ><span id="propTwoBaths">2</span></i>
+                  </div>
+              </div>
+            </div>
+            <div class="box">
+              <img id="propTwoPic" src="/img/p2.jpg" alt="">
+              <h3 id="home-price">$999,999</h3>
+              <div class="content">
+                  <div class="text">
+                      <h3 id="home-add">1234 Diamond Drive, Diamond City, Megaoplolis 11111</h3>
+                      <p id="home-loc">United Sates</p>
+                  </div>
+                  <!-- HOME DETAILS MAYBE?-->
+                  <div class="icon">
+                      <i class='bx bx-bed'><span id="propTwoBeds">5</span></i>
+                      <i class='bx bx-bath' ><span id="propTwoBaths">2</span></i>
+                  </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
